# corroded_earth

./: Cargo.toml  LICENCE.md  README.md  notes.md
configs/: bindings.ron
resources/: display_config.ron
resources/sprites/: tank.ron
src/: game_state.rs  main.rs
src/states/: ai_turn.rs  game.rs  mod.rs  player_turn.rs
src/systems/: aim.rs  bullet.rs  mod.rs
